UI Fixes & improvments
Panning
overlap bug fix

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
     background-color: lightgray;
     padding: 10px;
     margin: 0px;
-    z-index: 4;
+    z-index: 2;
 }
 
 .blueprintArea{
@@ -41,7 +41,15 @@ body{
     padding: 10px;
     margin: 0px;
     overflow: hidden;
-    z-index: 0;
+    
+}
+
+.blueprintContainer{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
 
@@ -52,6 +60,7 @@ body{
 
     padding: 5px;
     padding-right: 10px;
+    z-index: 2;
 }
 
 .in {
@@ -72,7 +81,7 @@ body{
 
   svg{
     position: relative;
-    z-index: 10000;
+    z-index: 1;
   }
 
  
@@ -130,6 +139,7 @@ button:focus {
     padding: 10px;
     margin-bottom: 10px;
     margin-top: 10px;
+    
 }
 
 .text{
